--- a/ai/frontend/src/index.html
+++ b/ai/frontend/src/index.html
@@ -2,18 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Speech Translation Service</title>
+  <title>Frontend</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 0;
-      background-color: #f3f4f6;
-    }
-  </style>
 </head>
 <body>
   <app-root></app-root>
